# nova-rag-benchmark

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
rag_bench/: __init__.py  adapter.py  base_client.py  baseline.py  bm25.py  cli.py  cli_client.py  grep_glob_searcher.py  inprocess_client.py  mcp_client.py  metrics.py  naive_rag.py  report.py  runner.py  submit.py
rag_bench/datasets/: loader.py  repos.json  warmup.jsonl
rag_bench/datasets/queries/: express.jsonl  fastapi.jsonl  flask.jsonl
rag_bench/presets/: bm25.json  chroma_mcp.json  cocoindex_code.json  grep_glob.json  mcp_local_rag.json  naive_rag.json  nova_rag.json
research/: complex-query-ground-truth.md
results/: baseline.json  comparison_report.json  final_results.json
server/: app.py  db.py  models.py
server/static/: index.html
tests/: test_adapter.py  test_baseline.py  test_bm25.py  test_cli_validate.py  test_cocoindex.py  test_comparison.py  test_error_handling.py  test_m1_replicates.py  test_metrics.py  test_naive_rag.py  test_runner.py  test_server.py  test_transport.py
