[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rag-bench"
version = "0.1.0"
description = "Benchmark for Code RAG MCP servers"
license = "MIT"
readme = "README.md"
keywords = ["rag", "mcp", "benchmark", "code-search", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Testing",
]
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "mcp>=1.0",
    "psutil>=5.9",
    "numpy>=1.26",
    "httpx>=0.27",
    "rich>=13.7",
    "fastapi>=0.115",
    "uvicorn>=0.32",
    "aiosqlite>=0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[project.scripts]
rag-bench = "rag_bench.cli:cli"
